If user has never submitted a name before, they are asked to login. Once they have logged in they are immediately redirected to a 'lobby' where they get a welcome message with their submitted username. The username is kept in localstorage on the browser, so next time the user shows up they are automatically logged in.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,3 +4,29 @@
   2014
   MIT License
 */
+html, body { height: 100%; }
+body {
+	color: #eee;
+	background-color: #337;
+	text-align: center;
+	text-shadow: 0 1px 3px rgba(0,0,0,0.5);
+	box-shadow: inset 0 0 100px rgba(0,0,0,0.35);
+	padding: 40px;
+}
+
+h1#page-title {
+	margin-top: 0;
+	padding-bottom: 40px;
+	border-bottom: 1px solid rgba(200,200,200,0.1);
+}
+
+.login-container {
+	padding-top: 50px;
+	width: 500px;
+	margin: 0 auto;
+}
+
+.login-container .input-group {
+	width: 300px;
+	margin: 40px auto;
+}
